cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug217067.cpp
template<int i>
    inline auto
    bug217067_foo(volatile int& __tuple)
    -> int volatile&
    { return 0; }